build/log/idf_py_stderr_output_11661
Command: make -j 10 all
/home/fus/Documents/DO-AN-02/comDriver/i2c/i2c.c:3:9: note: '#pragma message: i2c.c is compiling...'
    3 | #pragma message("i2c.c is compiling...")
      |         ^~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:10:9: note: '#pragma message: oled128x64.c is compiling...'
   10 | #pragma message("oled128x64.c is compiling...")
      |         ^~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledResetView':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:132:46: warning: passing argument 2 of 'i2cSetTransmitBuffer' discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  132 |     ret = i2cSetTransmitBuffer(oled->i2cDev, cmds, sizeof(cmds));
      |                                              ^~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64Definitions.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:6:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:62:49: note: expected 'void *' but argument is of type 'const uint8_t *' {aka 'const unsigned char *'}
   62 | def i2cSetTransmitBuffer(i2cDev_t * dev, void * txdPtr, size_t size);
      |                                          ~~~~~~~^~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h: At top level:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:31:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   31 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/main/do-an-02.c:2:
/home/fus/Documents/DO-AN-02/main/sender.h: In function 'oledTask':
/home/fus/Documents/DO-AN-02/main/sender.h:116:10: warning: unused variable 'c' [-Wunused-variable]
  116 |     char c[] = "--> 0";
      |          ^
/home/fus/Documents/DO-AN-02/main/sender.h: In function 'changeModeButtonISR':
/home/fus/Documents/DO-AN-02/main/sender.h:187:20: warning: variable 'lastNegEdgeTime' set but not used [-Wunused-but-set-variable]
  187 |     static int64_t lastNegEdgeTime = 0;
      |                    ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:177:14: warning: unused variable 'normPressedNum' [-Wunused-variable]
  177 |     int32_t* normPressedNum  = (int32_t*) pv + 1;
      |              ^~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h: In function 'modeControlTask':
/home/fus/Documents/DO-AN-02/main/sender.h:351:53: warning: passing argument 3 of 'gpio_isr_handler_add' discards 'volatile' qualifier from pointer target type [-Wdiscarded-qualifiers]
  351 |     gpio_isr_handler_add(BTN0, changeModeButtonISR, pressedRecord);
      |                                                     ^~~~~~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/main/../helper/espGPIOWrapper.h:9,
                 from /home/fus/Documents/DO-AN-02/main/../helper/general.h:31,
                 from /home/fus/Documents/DO-AN-02/main/sender.h:1:
/home/fus/.fus/esp-idf/components/esp_driver_gpio/include/driver/gpio.h:374:83: note: expected 'void *' but argument is of type 'volatile int32_t *' {aka 'volatile long int *'}
  374 | esp_err_t gpio_isr_handler_add(gpio_num_t gpio_num, gpio_isr_t isr_handler, void *args);
      |                                                                             ~~~~~~^~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.c: In function 'app_main':
/home/fus/Documents/DO-AN-02/main/do-an-02.c:44:5: error: too few arguments to function 'drawLineText'; expected 4, have 3
   44 |     drawLineText(oled, 0, "Test mode");
      |     ^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:15:6: note: declared here
   15 | void drawLineText(oled128x64Dev_t * oled, uint8_t line, const char * text, uint8_t lineH){
      |      ^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.c:48:5: error: too few arguments to function 'drawLineText'; expected 4, have 3
   48 |     drawLineText(oled, 0, "[+] oledTask()");
      |     ^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:15:6: note: declared here
   15 | void drawLineText(oled128x64Dev_t * oled, uint8_t line, const char * text, uint8_t lineH){
      |      ^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.c:52:5: error: too few arguments to function 'drawLineText'; expected 4, have 3
   52 |     drawLineText(oled, 0, "[+] prepairNSendDataTask()");
      |     ^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:15:6: note: declared here
   15 | void drawLineText(oled128x64Dev_t * oled, uint8_t line, const char * text, uint8_t lineH){
      |      ^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.c:56:5: error: too few arguments to function 'drawLineText'; expected 4, have 3
   56 |     drawLineText(oled, 0, "[+] prepairNSendDataTask()");
      |     ^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:15:6: note: declared here
   15 | void drawLineText(oled128x64Dev_t * oled, uint8_t line, const char * text, uint8_t lineH){
      |      ^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.c:62:5: error: too few arguments to function 'drawLineText'; expected 4, have 3
   62 |     drawLineText(oled, 0, "Running...");
      |     ^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:15:6: note: declared here
   15 | void drawLineText(oled128x64Dev_t * oled, uint8_t line, const char * text, uint8_t lineH){
      |      ^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.c:89:31: warning: passing argument 3 of 'drawLineText' discards 'volatile' qualifier from pointer target type [-Wdiscarded-qualifiers]
   89 |         drawLineText(oled, 0, content, 20);
      |                               ^~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h:15:70: note: expected 'const char *' but argument is of type 'volatile char *'
   15 | void drawLineText(oled128x64Dev_t * oled, uint8_t line, const char * text, uint8_t lineH){
      |                                                         ~~~~~~~~~~~~~^~~~
In file included from /home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/oled128x64.h:4,
                 from /home/fus/Documents/DO-AN-02/main/sender.h:4:
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h: At top level:
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:31:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   31 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/main/sender.h:3:
/home/fus/Documents/DO-AN-02/main/../comDriver/spi/spi.h:195:23: warning: 'spiHandleCSIsr' defined but not used [-Wunused-function]
  195 | static void IRAM_ATTR spiHandleCSIsr(void* pv) {
      |                       ^~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../comDriver/spi/spi.h:124:23: warning: 'spiHandleCLKIsr' defined but not used [-Wunused-function]
  124 | static void IRAM_ATTR spiHandleCLKIsr(void* pv) {
      |                       ^~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/do-an-02.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7426: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
